<resources>
    <string name="app_name">OrderMyDrinks</string>

    <!--General application strings-->
    <string name="btn_alertOK">Delete</string>

    <!--Menu strings-->

    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="exit">Exit</string>
    <string name="refresh">Refresh</string>

    <!--Select Place Strings-->
    <string name="btn_makereservation">Make Reservation</string>
    <string name="btn_callbar">Call Bar</string>
    <string name="txtv_name">Name:</string>
    <string name="txtv_address">Address:</string>
    <string name="txtv_website">WebSite</string>

    <!--Reserve Table Stings-->
    <string name="reserve_table_title">Enter Details</string>
    <string name="reserve_table_name">Name</string>
    <string name="reserve_table_email">Email</string>
    <string name="btn_selectdrinks">Select Drinks</string>
    <string name="transport_bus">Bus</string>
    <string name="transport_walk">Walk</string>
    <string name="transport_cycle">Cycle</string>
    <string name="transport_drive">Car</string>
    <string name="transport_spinner">Select your method of transport!</string>

    <!--Select Drinks stings-->

    <string name="btn_orderdrinks">Order Drinks</string>

    <string name="drinksList_text">Item Text</string>

</resources>
