<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.jdarcy.ordermydrinks.MainActivity">
    <item
        android:id="@+id/discard"
        android:icon="@drawable/ic_discard"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="always"/>
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="always"/>
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="101"
        android:title="@string/search"
        app:showAsAction="always"/>
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/edit"
        android:orderInCategory="100"
        android:title="@string/edit"
        app:showAsAction="never"/>
    <item
        android:id="@+id/Exit"
        android:orderInCategory="100"
        android:title="@string/exit"
        app:showAsAction="never"/>

</menu>
